[tool.poetry]
name = "gnssIR_python"
version = "0"
description = "GNSS Reflection Code"
authors = ["Kristine Larson <kristinem.larson@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.16"
matplotlib = "^3.1"
scipy = "^1.3"
wget = "^3.2"
requests = "^2.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
